Source/ProjectFirma.Web/Content/Bootstrap/firma/ncrp.theme.css
@font-face {
  font-family: 'Open Sans';
  font-style: normal;
  font-weight: 400;
  font-stretch: normal;
  src: url(https://fonts.gstatic.com/s/opensans/v29/memSYaGs126MiZpBA-UvWbX2vVnXBbObj2OVZyOOSr4dVJWUgsjZ0B4gaVc.ttf) format('truetype');
}
@font-face {
  font-family: 'Roboto';
  font-style: normal;
  font-weight: 400;
  src: url(https://fonts.gstatic.com/s/roboto/v30/KFOmCnqEu92Fr1Mu4mxP.ttf) format('truetype');
}
html,
body {
  height: 100%;
}
body {
  font-family: "Open Sans", sans-serif;
  font-size: 16px;
  line-height: 26px;
  background-color: #fff;
  color: #55575e;
}
input[disabled] {
  background-color: LightGray;
}
h1,
h2,
h3,
h4,
h5,
h6 {
  color: #424142;
  font-family: "Roboto", sans-serif;
  font-weight: 400;
  letter-spacing: 1px;
}
h2 label {
  font-weight: 400;
}
h4 {
  margin-top: 0px;
}
a,
a:visited {
  color: #2e6580;
}
a:hover {
  color: #e0871a;
  text-decoration: underline;
}
.nav li a {
  font-family: "Open Sans", sans-serif;
}
span.keyPhotoButton label {
  color: #2e6580;
}
label,
.control-label {
  color: #424142;
  font-weight: bold;
}
.pageTitle {
  font-weight: 400;
  text-transform: uppercase;
  color: #424142;
  font-size: 30px;
}
.firmaContent {
  background-color: #fff;
  border: 1px solid #fff;
}
.expandToFillScreen {
  min-height: 100%;
}
.header {
  background-color: #e6e7e9;
  padding: 0px;
}
.header img {
  height: 62px;
}
.header .headerText {
  display: inline-block;
  font-size: 30px;
  font-weight: normal;
  font-family: "Roboto", sans-serif;
  color: #55575e;
  vertical-align: bottom;
  text-transform: uppercase;
  margin-bottom: 0;
}
.header .headerText a {
  color: #55575e;
  vertical-align: top;
}
.header .headerText a #headerTenantShortDisplayName {
  font-family: "Roboto", sans-serif;
  text-transform: uppercase;
  margin-right: 20px;
}
.header .headerText a:hover,
.header .headerText a:active {
  text-decoration: none;
}
.header .headerText a:focus {
  text-decoration: none;
}
.navbar {
  background: #e6e7e9;
  border: none;
  border-radius: 0;
  margin-bottom: 0;
}
.menuDivider {
  border-left: 3px solid black;
  margin-right: 2rem;
  margin-left: 2rem;
  height: 62px;
}
.projectFirmaNavbar {
  background-color: #e6e7e9;
}
.projectFirmaNavbar .headerLogo {
  height: 40px;
  margin-top: 5px;
}
.projectFirmaNavbar .nav li {
  font-weight: 400;
  font-size: 14px;
  text-transform: uppercase;
}
.projectFirmaNavbar .nav li a {
  color: rgba(75, 68, 81, 0.7);
  font-family: "Roboto", sans-serif;
}
.projectFirmaNavbar .nav li a:hover,
.projectFirmaNavbar .nav li a:focus,
.projectFirmaNavbar .nav li a:active {
  color: #de7076;
  background-color: #e6e7e9;
  text-decoration: none;
}
.projectFirmaNavbar .nav li p a:hover {
  background-color: transparent;
}
.projectFirmaNavbar .nav li .navbar-text {
  color: rgba(75, 68, 81, 0.7);
  font-family: "Roboto", sans-serif;
}
.projectFirmaNavbar .nav li .nav .open > a,
.projectFirmaNavbar .nav li .nav .open > a:hover,
.projectFirmaNavbar .nav li .nav .open > a:focus {
  background-color: #e6e7e9;
  border-color: #e6e7e9;
}
.projectFirmaNavbar .nav li ul.dropdown-menu {
  background-color: #e6e7e9;
  border: none;
  border-top: none;
  border-radius: 0px;
  transition: opacity 0.25s;
}
.projectFirmaNavbar .nav li ul.dropdown-menu li a {
  font-weight: 400;
  font-family: "Roboto", sans-serif;
  color: rgba(75, 68, 81, 0.7);
  background-color: #e6e7e9;
}
.projectFirmaNavbar .nav li ul.dropdown-menu li a:hover,
.projectFirmaNavbar .nav li ul.dropdown-menu li a:active,
.projectFirmaNavbar .nav li ul.dropdown-menu li a:focus {
  color: #de7076;
  background-color: #e6e7e9;
  text-decoration: none;
}
.projectFirmaNavbar .nav li ul.dropdown-menu .divider {
  background-color: rgba(75, 68, 81, 0.7);
  margin: 9px 9px;
}
.projectFirmaNavbar .glyphicon-menu-hamburger {
  color: rgba(75, 68, 81, 0.7);
}
.factSheet h1,
.factSheet h2,
.factSheet h3,
.factSheet h4 {
  font-weight: 600;
}
footer#footer {
  position: relative;
  bottom: 0;
  left: 0;
  right: 0;
  width: 100%;
  height: auto;
  background-color: #424142;
  color: #e7e4cb;
}
footer#footer p {
  margin: 10px 0;
  font-size: 12px;
}
footer#footer a,
footer#footer a:visited {
  color: #e7e4cb;
}
footer#footer a:hover {
  color: #E8EAEE;
  text-decoration: underline;
}
.btn-firma,
.form-dialog .ui-widget-content .btn-firma,
.firma-modal-dialog .btn-firma {
  font-size: 14px;
  color: #fff;
  background-color: #e0871a;
  border-radius: 0px;
}
.btn-primary:hover {
  color: #fff;
  background-color: #B36C14;
}
.btn-firma:hover,
.btn-primary:focus,
.btn-primary.focus {
  color: #fff;
  background-color: #B36C14;
}
a.btn-firma {
  color: #fff;
  background-color: #e0871a;
}
table.summaryLayout th,
.stylizeLikeTH {
  text-align: left;
  font-weight: bold;
  padding: 2px 6px;
  vertical-align: top;
  color: #55575e;
}
.mainPageHeader {
  margin-top: 20px;
  margin-bottom: 20px;
}
.breadcrumbTitle,
.breadcrumbTitle a {
  color: #fff;
  font-size: 18px;
  font-weight: 600;
  text-transform: uppercase;
}
.breadcrumbTitle a:hover {
  text-decoration: none;
}
.breadcrumbArrow {
  display: inline-block;
  position: relative;
  padding: 10px 15px;
  text-align: center;
}
.singleArrow.current {
  background-color: #4b5c14;
  border-left-color: #4b5c14;
  color: #fff;
}
.singleArrow.default {
  background-color: DarkGray;
  border-left-color: DarkGray;
  color: #fff;
}
/* First arrow */
.firstArrow {
  border-top-left-radius: 0.25rem;
  border-bottom-left-radius: 0.25rem;
}
.firstArrow.current {
  background-color: #4b5c14;
  border-left-color: #4b5c14;
  color: #fff;
}
.firstArrow.default {
  background-color: DarkGray;
  border-left-color: DarkGray;
  color: #fff;
}
/* ... */

